thirdparty/boost/libs/range/test/compile_fail/adaptor/.uuid
5a8f437d-36a1-4c37-86e2-bcb2a0982ad5